k8s/express-api/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: express-svc
  labels:
    app: express-svc
spec:
  type: ClusterIP
  ports:
    - port: 80
      targetPort: 8080
  selector:
    app: express-app
