k8s/express-api/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: express-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
    - host: express-api.example.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: express-svc
                port:
                  number: 5000
